# OpenSearch

./: CHANGELOG.md  build.gradle  settings.gradle
.ci/: bwcVersions
.github/workflows/: gradle-check.yml
buildSrc/: build.gradle  version.properties
distribution/src/config/: opensearch.yml
gradle/: missing-javadoc.gradle
libs/core/src/main/java/org/opensearch/: Version.java
libs/geo/: build.gradle
libs/geo/src/main/java/org/opensearch/geometry/docvalues/: GeometryShape.java
modules/geo/src/main/java/org/opensearch/geo/: GeoModulePlugin.java  GeoPlugin.java
modules/geo/src/main/java/org/opensearch/geo/pipeline/: NormalizationProcessor.java
plugins/ingest-attachment/: build.gradle
plugins/opensearch-iouring/: build.gradle
plugins/opensearch-iouring/native/: CMakeLists.txt
plugins/opensearch-iouring/native/src/: opensearch_iouring.c
plugins/opensearch-iouring/scripts/: build-all.sh  build_native.sh  generate_bindings.sh  run-opensearch.sh  setup-al2023.sh
plugins/opensearch-iouring/src/main/resources/: pugin-descriptor.properties
plugins/repository-azure/: build.gradle
plugins/repository-gcs/: build.gradle
plugins/repository-hdfs/: build.gradle
qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/: 30_geoshape.yml
qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/: 30_geoshape.yml
qa/rolling-upgrade/src/test/resources/rest-api-spec/test/upgraded_cluster/: 30_geoshape.yml
scripts/: build.sh
server/src/internalClusterTest/java/org/opensearch/recovery/: FullRollingRestartIT.java
server/src/main/java/org/opensearch/: NewSegmentMergePolicy.java
server/src/main/java/org/opensearch/action/: ActionModule.java
server/src/main/java/org/opensearch/action/search/: AbstractSearchAsyncAction.java  ArraySearchPhaseResults.java  CanMatchPreFilterSearchPhase.java  FetchSearchPhase.java  NormalizationPostSearchPhaseProcessor.java  PostSearchPhaseProcessor.java  QueryPhaseResultConsumer.java  SearchDfsQueryThenFetchAsyncAction.java  SearchPhase.java  SearchPhaseResults.java  SearchQueryThenFetchAsyncAction.java  SearchRequest.java  SearchTransportService.java  TransportSearchAction.java
server/src/main/java/org/opensearch/action/support/replication/: TransportReplicationAction.java
server/src/main/java/org/opensearch/common/geo/: GeoShapeDocValue.java  ShapeDocValue.java
server/src/main/java/org/opensearch/common/lucene/search/: CompoundQueryTopDocs.java
server/src/main/java/org/opensearch/index/engine/: Engine.java  InternalEngine.java  NRTReplicationReaderManager.java  NoOpEngine.java
server/src/main/java/org/opensearch/index/fielddata/: FieldData.java  LeafGeoShapeFieldData.java  MultiGeoShapeValues.java
server/src/main/java/org/opensearch/index/fielddata/plain/: AbstractGeoShapeIndexFieldData.java  AbstractLeafGeoShapeFieldData.java  GeoShapeDVLeafFieldData.java  LatLonPointDVLeafFieldData.java
server/src/main/java/org/opensearch/index/mapper/: AbstractGeometryFieldMapper.java  DocumentParser.java  GeoShapeFieldMapper.java  SourceFieldMapper.java
server/src/main/java/org/opensearch/index/query/: ExistsQueryBuilder.java
server/src/main/java/org/opensearch/index/shard/: IndexShard.java
server/src/main/java/org/opensearch/index/store/: FsDirectoryFactory.java
server/src/main/java/org/opensearch/node/: Node.java
server/src/main/java/org/opensearch/plugins/: SearchPlugin.java
server/src/main/java/org/opensearch/rest/: RestController.java
server/src/main/java/org/opensearch/rest/action/search/: RestSearchAction.java
server/src/main/java/org/opensearch/search/: SearchModule.java  SearchService.java
server/src/main/java/org/opensearch/search/aggregations/: AggregatorFactories.java
server/src/main/java/org/opensearch/search/aggregations/bucket/: GeoTileUtils.java
server/src/main/java/org/opensearch/search/internal/: ShardSearchRequest.java
server/src/main/java/org/opensearch/search/pipeline/: Pipeline.java  SearchPhaseProcessor.java  SearchPipelineService.java
server/src/main/java/org/opensearch/search/query/: QueryPhase.java
server/src/main/java/org/opensearch/transport/: Header.java  TransportHandshaker.java  TransportService.java
server/src/main/java/org/opensearch/transport/nativeprotocol/: NativeOutboundMessage.java
server/src/test/java/org/opensearch/action/search/: AbstractSearchAsyncActionTests.java  CanMatchPreFilterSearchPhaseTests.java  SearchAsyncActionTests.java  SearchQueryThenFetchAsyncActionTests.java
server/src/test/java/org/opensearch/index/mapper/: SourceFieldMapperTests.java
server/src/test/java/org/opensearch/index/store/: FsDirectoryFactoryTests.java
test/fixtures/hdfs-fixture/: build.gradle
(+55 files in other folders)
